# qtradesystem

./: .gitignore  .pylintrc  README.md  config.yml  index.py  pyproject.toml
qtsys/: backtest.py  backtest_runner.py  base_steps.py  broker.py  config_loader.py  data.py  global_config.py  live_runner.py  live_trade.py  order_resolver.py  steps.py  tradier.py  util.py  yahoo.py
qtsys/alpha/: alpha1.py  alpha_model.py
qtsys/broker/: backtest_broker.py  broker.py  order.py  order_resolver.py  position.py  tradier_broker.py  typing.py
qtsys/client/: arctic_lib.py  iex.py  pyex.py  pystorew.py  tradier.py
qtsys/data/: data_bundle.py  feed.py  market_data.py  quote.py  tradier_data.py  util.py  yahoo_data.py  yahoo_feed.py
qtsys/engine/: backtest_engine.py  engine.py
qtsys/portfolio/: equal_portfolio_opt.py  portfolio.py  portfolio_opt.py  tradier_portfolio.py
qtsys/portfolio/optimizer/: base_optimizer.py  equal_optimizer.py
qtsys/runner/: backtest_runner.py  live_runner.py
qtsys/screener/: asset_screener.py  finviz_asset_screener.py  screener1.py
qtsys/selector/: sample_selector.py  universe_selector.py
qtsys/sizer/: equal_position_sizer.py  position_sizer.py
qtsys/util/: order_resolver.py  time_util.py
qtsys_test/: broker_test.py  client_test.py  data_test.py  runner_test.py
qtsys_test/broker/: broker_test.py
qtsys_test/data/: data_test.py  test_data.py  test_tradier_data.py
strats/: sample_strat.py
test/: broker_test.py  client_test.py  data_test.py  pystorew_test.py  runner_test.py
