[tool.poetry]
name = "ml-trade"
version = "0.1.0"
description = ""
authors = ["Ethan Tong <ethantong.studio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yfinance = "^0.1.63"
notebook = "^6.4.0"
pyEX = "^0.5.0"
QuantStats = "^0.0.34"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
